--- a/src/App.css
+++ b/src/App.css
@@ -220,7 +220,8 @@ section.login-sec {
     color: #ffffff;
     margin: 18px 0;
     display: inline-block;
-    padding: 14px 126px;
+    width: 100%;
+    height: 50px;
     border-radius: 5px;
     text-decoration: none;
     font-size: 18px;
