--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,9 @@ body{
     background-size: 100%;
     font-family: 'Montserrat', sans-serif;
 }
+.hlXQaj{
+width: auto !important;
+}
 header.pageheader {
     position: fixed;
     width: 100%;
